--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -9,6 +9,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8" style="width:50%;margin-right:15%;margin-top:2%;">
+            {% if user.orders %}
             <div class="row" style="background:black;color:white;display:flex;align-items:center;border-radius: 5px;">
                 {% for order in user.orders %}
                 <p>
@@ -56,6 +57,10 @@
                 <!-- Вне холста -->
                 {% endfor %}
             </div>
+            {% else %}
+            <h5>Вы не оставляли заявок</h5>
+            <p>Перейдите на <a href="{{url_for('main.index')}}" style="text-decoration:none">главную</a>, чтобы оставить первую!</p>
+            {% endif %}
         </div>
         <div class="col-sm-4">
             <div class="card" style="width: 18rem;margin-top:6%">
