--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -20,19 +20,6 @@
                         onchange="ChangeButtonStatus()" onkeyup="ChangeButtonStatus()">
                 </div>
                 <div class="form-group help">
-                    <input type="text" class="form-control" placeholder="Откуда" name="from"
-                        onchange="ChangeButtonStatus()" onkeyup="ChangeButtonStatus()">
-                </div>
-                <div class="form-group help">
-                    <input type="text" class="form-control" placeholder="Куда" name="to" onchange="ChangeButtonStatus()"
-                        onkeyup="ChangeButtonStatus()">
-                </div>
-                <div class="form-group help">
-                    <input type="date" name="calendar" value="{{ today }}" min="{{ today }}" max="{{ max_day }}"
-                        class="form-control" placeholder="Пароль" onchange="ChangeButtonStatus()"
-                        onkeyup="ChangeButtonStatus()">
-                </div>
-                <div class="form-group help">
                     <select name="ta" id="ta" class="selectpicker form-control" onchange="ChangeButtonStatus()"
                         onkeyup="ChangeButtonStatus()">
                         <option value="1" class="option-selected">Пасcажирская (20р)</option>
@@ -53,9 +40,22 @@
                             <option value="Фура" class="option-selected">Фура</option>
                         </select>
                     </div>
-                    <div class="form-group help">
-                        <button type="submit" class="btn btn-default" name="SendButton">Заказать</button>
-                    </div>
+                </div>
+                <div class="form-group help">
+                    <input type="date" name="calendar" value="{{ today }}" min="{{ today }}" max="{{ max_day }}"
+                        class="form-control" placeholder="Пароль" onchange="ChangeButtonStatus()"
+                        onkeyup="ChangeButtonStatus()">
+                </div>
+                <div class="form-group help">
+                    <input type="text" class="form-control" placeholder="Откуда" name="from"
+                        onchange="ChangeButtonStatus()" onkeyup="ChangeButtonStatus()">
+                </div>
+                <div class="form-group help">
+                    <input type="text" class="form-control" placeholder="Куда" name="to" onchange="ChangeButtonStatus()"
+                        onkeyup="ChangeButtonStatus()">
+                </div>
+                <div class="form-group help">
+                    <button type="submit" class="btn btn-default" name="SendButton">Заказать</button>
                 </div>
             </form>
         </div>
@@ -78,10 +78,11 @@
         let default_fields = (form.name.value != "" && form.email.value != "" &&
             form.phone.value != "" && form.from.value != "" && form.to.value != ""
         )
-        let amount = form.amount.value!="";
-        console.log("default",default_fields)
-        console.log("auto",amount)
-        form.SendButton.disabled = !(default_fields && amount);
+        let amount = form.amount.value != "";
+        // console.log("default", default_fields)
+        // console.log("auto", amount)
+        console.log("visible", document.getElementById("auto").style.visibility == 'visible')
+        form.SendButton.disabled = !(default_fields && (amount || document.getElementById("auto").style.visibility == 'visible'));
 
     }
     ChangeButtonStatus()
