--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -1,7 +1,81 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>Тут должна быть информация о сайте</h2>
-    <p>К сожалению, Ярик очень ленив, чтобы сделать нормальное описание...</p>
-    <h4>Анекдот</h4>
-    <p>Вот если бы дед с бабкой, слепившие колобка, запатентовали бренд, их потомки озолотились бы на смайликах!</p>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Регистрация</h4>
+    </div>
+    <div class="col-8">Чтобы создать учетную запись, перейдите на страницу <a
+            href="{{ url_for('auth.sign_up') }}">Регистрация</a>, заполните форму
+        в соответствии с описанием полей и нажмите кнопку <b>Создать аккаунт</b></div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Авторизация</h4>
+    </div>
+    <div class="col-8">Чтобы войти в учетную запись, перейдите на страницу <a
+            href="{{ url_for('auth.sign_in') }}">авторизации</a>, заполните форму
+        в соответствии с описанием полей и нажмите кнопку <b>Войти</b></div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Восстановление пароля (1 часть)</h4>
+    </div>
+    <div class="col-8">Если Вы забыли пароль от Вашей учетной записи, перейдите на страницу <a
+            href="{{ url_for('auth.sign_in') }}">авторизации</a>
+        и нажмите на ссылку <a href="{{ url_for('auth.send_reset_password_email') }}">Восстановить</a>. Вы будете
+        перенаправлены на страницу восстановления пароля,
+        где нужно будет ввести адрес электронной почты, указанной при создании учетной записи. После заполнения формы
+        нажмите на кнопку <b>Отправить Письмо</b>. Если почта введена верно, то на нее придет сообщения с инструкциями
+        по восстановлению пароля</div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Восстановление пароля (2 часть)</h4>
+    </div>
+    <div class="col-8">После перехода по ссылке из сообщения, Вы будете перенаправлены на страницу для создания нового
+        пароля. Введите новый пароль и нажмите <b>Сменить</b></div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Создание заявки на перевозку</h4>
+    </div>
+    <div class="col-8">Чтобы оставить заявку на перевозку, перейдите на <a href="{{ url_for('main.index') }}">главную
+            страницу</a>, заполните
+        форму в соответствии с описанем полей формы и нажми кнопку <b>Создать</b></div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Просмотр заявок</h4>
+    </div>
+    <div class="col-8">Чтобы просмотреть Ваши заявки, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a>
+        и вы увидите список заявок.
+        Нажмите на кнопку <b>Подробнее</b>, чтобы посмотреть полные данные заявки. Также можно нажать кнопку удалить,
+        чтобы убрать заявку из обработки</div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Смена пароля</h4>
+    </div>
+    <div class="col-8">Чтобы сменить пароль, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и справа
+        в <b>карточке</b> нажмите
+        кнопку <b>Сменить пароль</b>. Далее вас отправит на страницу для смены пароля. Заполните форму в соответствии с
+        описанием и нажмите кнопку <b>Сменить</b></div>
+</div>
+<hr>
+<div class="row" style="vertical-align: middle;">
+    <div class="col-4">
+        <h4>Смена почты</h4>
+    </div>
+    <div class="col-8">Чтобы сменить почту, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и справа
+        в <b>карточке</b> нажмите
+        кнопку <b>Сменить почту</b>. Далее вас отправит на страницу для смены почты. Заполните форму в соответствии с
+        описанием и нажмите кнопку <b>Сменить</b></div>
+</div>
+<hr>
 {% endblock content %}
