--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,9 +51,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" href="{{ url_for('main.index') }}">Главная</a>
-                    <a class="nav-link" target="_blank"
-                        href="{{url_for('main.about')}}">О
-                        проекте</a>
+                    <a class="nav-link" target="_blank" href="{{url_for('main.about')}}">Справка</a>
                     {% if current_user.is_authenticated %}
                     {% if current_user.manager == 1 %}
                     <a class="nav-link" href="{{ url_for('manage.mprofile',filter='Все') }}">Кабинет</a>
