--- a/app/templates/manage/day_details.html
+++ b/app/templates/manage/day_details.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="row">
         {% for order in orders %}
-        <div class="card mb-3" style="width: 360px;">
+        <div class="card mb-3" style="width: 370px;">
             <div class="row no-gutters">
                 <!-- <div class="col-md-4">
                     {% if order.order_type == "Пассажирская" %}
@@ -34,9 +34,9 @@
                             Пункт прибытия: <b>{{ order.arrival_point }}</b><br>
                             Тип доставки: <b>{{ order.order_type }}</b><br>
                             {% if order.order_type == "Пассажирская" %}
-                            Количество пассажиров: <b>{{ order.amount}}</b>
+                            Количество пассажиров: <b>{{ order.amount}}</b><br>
                             {% else %}
-                            Вес груза: <b>{{ order.amount}}</b>
+                            Вес груза: <b>{{ order.amount}}</b><br>
                             {% endif %}
                             Остановки: <b>{{order.stops}}</b><br>
                         </p>
