--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -4,10 +4,10 @@
 </style>
 <div class="container">
     <div class="row">
+        <h3 style="text-align: center">Оставить заявку</h3>
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="POST" action="" name="FormOrder">
-                <h3>Оставить заявку</h3>
-                <div class="form-group">
+                <div class="form-group" style="padding-top:20px">
                     <input type="text" class="form-control" placeholder="ФИО" name="FCS" onchange="ChangeButtonStatus()"
                         onkeyup="ChangeButtonStatus()">
                 </div>
@@ -31,7 +31,8 @@
                     <div class="col-sm form-group help">
                         <input type="text" class="form-control" name="amount" id="amount"
                             placeholder="Кол-во пассажиров" onchange="ChangeButtonStatus()"
-                            onkeyup="ChangeButtonStatus()">
+                            onkeyup="ChangeButtonStatus()" onkeypress="return (event.charCode==8 || event.charCode==0 ||
+                            event.charCode==13) ? null : event.charCode>= 49 && event.charCode <= 57">
                     </div>
                     <div class="col-sm form-group help">
                         <select class="selectpicker form-control" name="auto" id="auto" style="visibility: hidden;"
