--- a/app/templates/manage/manager_profile.html
+++ b/app/templates/manage/manager_profile.html
@@ -64,19 +64,19 @@
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 <li>
                                     <a class="" href="{{ url_for('manage.accept_order',id=order.id) }}"
-                                        style="text-decoration:0;width: 100%;display: block;">
+                                        style="width: 100%;display: block;">
                                         Принять
                                     </a>
                                 </li>
                                 <li>
                                     <a class="" href="{{ url_for('manage.decline_order',id=order.id) }}"
-                                        style="text-decoration:0;width: 100%;display: block;">
+                                        style="width: 100%;display: block;">
                                         Отклонить
                                     </a>
                                 </li>
                                 <li>
                                     <a class="" href="{{ url_for('manage.delete_order',id=order.id) }}"
-                                        style="text-decoration:0;width: 100%;display: block;">
+                                        style="width: 100%;display: block;">
                                         Удалить
                                     </a>
                                 </li>
