New about and help pages

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -64,8 +64,7 @@
                     {{ form.submit(class="btn btn-outline-info") }}
                 </div>
             </form>
-            <hr>
-            <div class="border-top pt-3">
+            <div class="">
                 <small class="text-muted">
                     Уже есть аккаунт? <a class="ml-2" href="{{ url_for('auth.sign_in') }}">Войти</a>
                 </small>
