--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
         @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
         body {
-            background-color: #d8dfe2;
+            background-color: #262a2b;
             font-family: 'Roboto Mono', monospace;
             font-size: 14px;
         }
@@ -51,7 +51,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" href="{{ url_for('main.index') }}">Главная</a>
-                    <a class="nav-link" target="_blank" href="{{url_for('main.about')}}">Справка</a>
+                    <a class="nav-link active" href="{{ url_for('main.about') }}">О нас</a>
+                    <a class="nav-link" target="_blank" href="{{url_for('main.help')}}">Справка</a>
                     {% if current_user.is_authenticated %}
                     {% if current_user.manager == 1 %}
                     <a class="nav-link" href="{{ url_for('manage.mprofile',filter='Все') }}">Кабинет</a>
@@ -69,7 +70,7 @@
     </header>
     <main role="main" class="container">
         <div class="row">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8"> -->
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
                 {% for message in messages %}
@@ -82,7 +83,7 @@
                 {% endif %}
                 {% endwith %}
                 {% block content %}{% endblock %}
-            </div>
+            <!-- </div> -->
         </div>
     </main>
     <!-- Optional JavaScript -->
