--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -1,81 +1,182 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Регистрация</h4>
-    </div>
-    <div class="col-8">Чтобы создать учетную запись, перейдите на страницу <a
-            href="{{ url_for('auth.sign_up') }}">Регистрация</a>, заполните форму
-        в соответствии с описанием полей и нажмите кнопку <b>Создать аккаунт</b></div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Авторизация</h4>
-    </div>
-    <div class="col-8">Чтобы войти в учетную запись, перейдите на страницу <a
-            href="{{ url_for('auth.sign_in') }}">авторизации</a>, заполните форму
-        в соответствии с описанием полей и нажмите кнопку <b>Войти</b></div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Восстановление пароля (1 часть)</h4>
-    </div>
-    <div class="col-8">Если Вы забыли пароль от Вашей учетной записи, перейдите на страницу <a
-            href="{{ url_for('auth.sign_in') }}">авторизации</a>
-        и нажмите на ссылку <a href="{{ url_for('auth.send_reset_password_email') }}">Восстановить</a>. Вы будете
-        перенаправлены на страницу восстановления пароля,
-        где нужно будет ввести адрес электронной почты, указанной при создании учетной записи. После заполнения формы
-        нажмите на кнопку <b>Отправить Письмо</b>. Если почта введена верно, то на нее придет сообщения с инструкциями
-        по восстановлению пароля</div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Восстановление пароля (2 часть)</h4>
-    </div>
-    <div class="col-8">После перехода по ссылке из сообщения, Вы будете перенаправлены на страницу для создания нового
-        пароля. Введите новый пароль и нажмите <b>Сменить</b></div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Создание заявки на перевозку</h4>
-    </div>
-    <div class="col-8">Чтобы оставить заявку на перевозку, перейдите на <a href="{{ url_for('main.index') }}">главную
-            страницу</a>, заполните
-        форму в соответствии с описанем полей формы и нажми кнопку <b>Создать</b></div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Просмотр заявок</h4>
-    </div>
-    <div class="col-8">Чтобы просмотреть Ваши заявки, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a>
-        и вы увидите список заявок.
-        Нажмите на кнопку <b>Подробнее</b>, чтобы посмотреть полные данные заявки. Также можно нажать кнопку удалить,
-        чтобы убрать заявку из обработки</div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Смена пароля</h4>
-    </div>
-    <div class="col-8">Чтобы сменить пароль, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и справа
-        в <b>карточке</b> нажмите
-        кнопку <b>Сменить пароль</b>. Далее вас отправит на страницу для смены пароля. Заполните форму в соответствии с
-        описанием и нажмите кнопку <b>Сменить</b></div>
-</div>
-<hr>
-<div class="row" style="vertical-align: middle;">
-    <div class="col-4">
-        <h4>Смена почты</h4>
-    </div>
-    <div class="col-8">Чтобы сменить почту, перейдите в <a href="{{ url_for('profile.profile') }}">Профиль</a> и справа
-        в <b>карточке</b> нажмите
-        кнопку <b>Сменить почту</b>. Далее вас отправит на страницу для смены почты. Заполните форму в соответствии с
-        описанием и нажмите кнопку <b>Сменить</b></div>
-</div>
-<hr>
+<style>
+    body {
+        background: #262a2b;
+    }
+
+    .tilesWrap {
+        padding: 0;
+        margin: 50px auto;
+        list-style: none;
+        text-align: center;
+    }
+
+    .tilesWrap li {
+        display: inline-block;
+        width: 20%;
+        min-width: 200px;
+        max-width: 230px;
+        padding: 80px 20px 40px;
+        position: relative;
+        vertical-align: top;
+        margin: 10px;
+        font-family: 'helvetica', san-serif;
+        min-height: 25vh;
+        background: #262a2b;
+        border: 1px solid #252727;
+        text-align: left;
+    }
+
+    .tilesWrap li h2 {
+        font-size: 114px;
+        margin: 0;
+        position: absolute;
+        opacity: 0.2;
+        top: 50px;
+        right: 10px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .tilesWrap li h3 {
+        font-size: 20px;
+        color: #b7b7b7;
+        margin-bottom: 5px;
+    }
+
+    .tilesWrap li p {
+        font-size: 16px;
+        line-height: 18px;
+        color: #b7b7b7;
+        margin-top: 5px;
+    }
+
+    .tilesWrap li button {
+        background: transparent;
+        border: 1px solid #b7b7b7;
+        padding: 10px 20px;
+        color: #b7b7b7;
+        border-radius: 3px;
+        position: relative;
+        transition: all 0.3s ease-in-out;
+        transform: translateY(-40px);
+        opacity: 0;
+        cursor: pointer;
+        overflow: hidden;
+    }
+
+    .tilesWrap li button:before {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 120%;
+        background: #b7b7b7;
+        top: 0;
+        opacity: 0;
+        left: -140px;
+        border-radius: 0 20px 20px 0;
+        z-index: -1;
+        transition: all 0.3s ease-in-out;
+
+    }
+
+    .tilesWrap li:hover button {
+        transform: translateY(5px);
+        opacity: 1;
+    }
+
+    .tilesWrap li button:hover {
+        color: #262a2b;
+    }
+
+    .tilesWrap li button:hover:before {
+        left: 0;
+        opacity: 1;
+    }
+
+    .tilesWrap li:hover h2 {
+        top: 0px;
+        opacity: 0.6;
+    }
+
+    .tilesWrap li:before {
+        content: '';
+        position: absolute;
+        top: -2px;
+        left: -2px;
+        right: -2px;
+        bottom: -2px;
+        z-index: -1;
+        background: #fff;
+        transform: skew(2deg, 2deg);
+    }
+
+    .tilesWrap li:after {
+        content: '';
+        position: absolute;
+        width: 40%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: rgba(255, 255, 255, 0.02);
+    }
+
+    .tilesWrap li:nth-child(1):before {
+        background: #C9FFBF;
+        background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
+        background: linear-gradient(to right, #FFAFBD, #C9FFBF);
+    }
+
+    .tilesWrap li:nth-child(2):before {
+        background: #f2709c;
+        background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
+        background: linear-gradient(to right, #ff9472, #f2709c);
+    }
+
+    .tilesWrap li:nth-child(3):before {
+        background: #c21500;
+        background: -webkit-linear-gradient(to right, #ffc500, #c21500);
+        background: linear-gradient(to right, #ffc500, #c21500);
+    }
+
+    .tilesWrap li:nth-child(4):before {
+        background: #FC354C;
+        background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
+        background: linear-gradient(to right, #0ABFBC, #FC354C);
+    }
+</style>
+<ul class="tilesWrap">
+    <li>
+        <h2>01</h2>
+        <h3>Успех Клиента - наша основная цель</h3>
+        <p>
+            Качественный сервис и индивидуальный подход стали гигиеническими факторами отношений с современным Клиентом.
+            Наша задача помочь каждому Клиенту добиваться успеха посредством взаимодействия с нашей командой.
+        </p>
+    </li>
+    <li>
+        <h2>02</h2>
+        <h3>Соответствие международным стандартам</h3>
+        <p>
+            В 2016 году мы прошли сертификацию ISO 9001:2015, и проходим ежегодный аудит. Внутренние стандарты и
+            нормативы в области менеджмента качества существенно превышают требования международного стандарта.
+        </p>
+    </li>
+    <li>
+        <h2>03</h2>
+        <h3>Информационная поддержка</h3>
+        <p>
+            Настоящее будущее неразрывно связано с цифровой экономикой, поэтому и наша IT-система непрерывно развивается
+            в этом направлении, обеспечивая автоматизированные технологии обмена данными и документами со всеми нашими
+            контрагентами.
+        </p>
+    </li>
+    <li>
+        <h2>04</h2>
+        <h3>А что мы можем?</h3>
+        <p>
+            Наша компания предоставляет пассажироперевозки и грузоперевозки по всему СНГ. Наши менеджеры мгновенно реагируют на заявки, а численность автопарка поражает воображение.
+        </p>
+    </li>
+</ul>
 {% endblock content %}
