--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -4,7 +4,7 @@
 </style>
 <div class="container">
     <div class="row">
-        <h3 style="text-align: center">Оставить заявку</h3>
+        <h3 style="text-align: center;color:white">Оставить заявку</h3>
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="POST" action="" name="FormOrder">
                 <div class="form-group" style="padding-top:30px">
