--- a/app/templates/manage/manager_profile.html
+++ b/app/templates/manage/manager_profile.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8" style="width:50%;margin-right:15%;margin-top:2%;">
-            <div class="row" style="background:black;color:white;display:flex;align-items:center;border-radius: 5px;">
+            <div class="row" style="background:white;color:black;border-width:5px;border-color: black; display:flex;align-items:center;border-radius: 5px;">
                 {% for order in orders %}
                 <p>
                 <div class="col-sm" style="text-align:center; width: 100%;">{{order.date|date}}</div>
