Structure rebuild (css, js)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
+    <script src="{{url_for('static',filename='jquery-3.6.0.min.js')}}" ></script>
+    <script src="{{url_for('static',filename='jquery.maskedinput.js')}}"></script>
     <title>AutoBaze - {{ title }}</title>
 </head>
 
