--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='cards.css') }}">
+
 <ul class="tilesWrap">
     <li>
         <h2>01</h2>
