--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Возникла ошибка</h1>
-    <p>Администратор уже уведомлен. Просим прощения за неудобства</p>
-    <p><a href="{{ url_for('main.index') }}">Вернуться</a></p>
+    <h1 style="color:white">Возникла ошибка</h1>
+    <p style="color:white">Администратор уже уведомлен. Просим прощения за неудобства</p>
+    <p style="color:white"><a href="{{ url_for('main.index') }}">Вернуться</a></p>
 {% endblock %}
